setting up websockets
