# main.go
@@ -2,6 +2,9 @@ package main
 
 import (
 	"context"
+	"encoding/json"
+
+	// "crypto/tls"
 	"database/sql"
 	"log"
 	"net"
@@ -10,6 +13,7 @@ import (
 	"os/signal"
 	"syscall"
 
+	"github.com/gorilla/websocket"
 	"github.com/hibiken/asynq"
 	_ "github.com/lib/pq"
 	"github.com/rakyll/statik/fs"
@@ -31,11 +35,149 @@ import (
 	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
 	"github.com/rs/cors"
 	"google.golang.org/grpc"
+
+	// "google.golang.org/grpc/credentials"
+	"google.golang.org/grpc/credentials/insecure"
 	"google.golang.org/grpc/reflection"
 	"google.golang.org/protobuf/encoding/protojson"
 )
 
 var signals = []os.Signal{os.Interrupt, syscall.SIGTERM, syscall.SIGINT}
+var upgrader = websocket.Upgrader{
+	CheckOrigin: func(r *http.Request) bool {
+		return true
+	},
+}
+
+// WebSocket handler function
+func handleWebSocketConnection(config utils.Config, w http.ResponseWriter, r *http.Request) {
+	// Upgrade HTTP connection to WebSocket
+	conn, err := upgrader.Upgrade(w, r, nil)
+	if err != nil {
+		log.Println("Failed to upgrade connection:", err)
+		return
+	}
+	defer conn.Close()
+
+	// Connect to gRPC server securely (with TLS)
+	grpcConn, err := grpc.NewClient(config.GRPCServerAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
+	if err != nil {
+		log.Println("Failed to connect to gRPC server:", err)
+		return
+	}
+	defer grpcConn.Close()
+	client := pb.NewPeerbillClient(grpcConn)
+
+	// Start the bidirectional stream using SubscribeRate
+	stream, err := client.SubscribeRate(r.Context())
+	if err != nil {
+		log.Println("Error starting SubscribeRate stream:", err)
+		return
+	}
+
+	// Goroutine for reading gRPC responses and sending them to the WebSocket
+	go func() {
+		for {
+			resp, err := stream.Recv() // Receive from the gRPC stream
+			if err != nil {
+				log.Println("Error receiving from gRPC stream:", err)
+				break
+			}
+
+			// Marshal the message to JSON
+			data, err := json.Marshal(resp)
+			if err != nil {
+				log.Println("Error marshaling response to JSON:", err)
+				break
+			}
+
+			// Send the response back to the WebSocket client
+			err = conn.WriteMessage(websocket.TextMessage, data) // Send the marshaled JSON response
+			if err != nil {
+				log.Println("Error writing to WebSocket:", err)
+				break
+			}
+		}
+	}()
+
+	// Continuously read messages from the WebSocket
+	for {
+		// Read a message from the WebSocket client
+		_, msg, err := conn.ReadMessage()
+		if err != nil {
+			log.Println("Error reading from WebSocket:", err)
+			break
+		}
+
+		// Use an anonymous struct to unmarshal the message
+		var message struct {
+			Fiat   string `json:"fiat"`
+			Crypto string `json:"crypto"`
+		}
+
+		// Unmarshal the JSON byte slice into the anonymous struct
+		err = json.Unmarshal(msg, &message)
+		if err != nil {
+			log.Println("Error unmarshaling JSON:", err)
+			continue
+		}
+
+		// Send the WebSocket message as a SubscribeRateRequest to the gRPC server
+		err = stream.Send(&pb.SubscribeRateRequest{
+			Crypto: message.Crypto,
+			Fiat:   message.Fiat,
+		})
+		if err != nil {
+			log.Println("Error sending message to gRPC server:", err)
+			continue
+		}
+	}
+
+	// When the WebSocket connection is closed, cancel the gRPC stream
+	conn.SetCloseHandler(func(code int, text string) error {
+		log.Println("WebSocket connection closed. Cancelling gRPC stream.")
+		stream.CloseSend() // Close the gRPC stream
+		return nil
+	})
+}
+
+func runWebSocketServer(group *errgroup.Group, ctx context.Context, config utils.Config) {
+	// Define WebSocket handler route
+	httpMux := http.NewServeMux()
+	httpMux.HandleFunc("/ws", func(w http.ResponseWriter, r *http.Request) {
+		handleWebSocketConnection(config, w, r)
+	})
+
+	// Set up your HTTP server
+	httpServer := &http.Server{
+		Handler: httpMux,
+		Addr:    config.WebsocketAddr,
+	}
+
+	// Start the WebSocket server in a goroutine
+	group.Go(func() error {
+		log.Print("WebSocket server listening on ", config.WebsocketAddr)
+		err := httpServer.ListenAndServe()
+		if err != nil && err != http.ErrServerClosed {
+			log.Fatal(err)
+		}
+		return nil
+	})
+
+	// Gracefully shutdown WebSocket server
+	group.Go(func() error {
+		<-ctx.Done()
+		log.Print("Gracefully shutting down WebSocket server...")
+
+		err := httpServer.Shutdown(context.Background())
+		if err != nil {
+			log.Fatal(err)
+		}
+
+		log.Print("WebSocket server shutdown completed.")
+		return nil
+	})
+}
 
 func main() {
 	config, err := utils.LoadConfig(".")
@@ -65,6 +207,7 @@ func main() {
 	runGatewayServer(group, ctx, config, repository, taskDistributor)
 	runTaskProcessor(group, ctx, redisOption, repository, config)
 	runGrpcServer(group, ctx, config, repository, taskDistributor)
+	runWebSocketServer(group, ctx, config)
 
 	// wait bfr exiting main fn
 	err = group.Wait()
@@ -103,7 +246,7 @@ func runGatewayServer(group *errgroup.Group, ctx context.Context, config utils.C
 	})
 
 	grpcMux := runtime.NewServeMux(options)
-	err = pb.RegisterPeerBillTraderHandlerServer(ctx, grpcMux, server)
+	err = pb.RegisterPeerbillHandlerServer(ctx, grpcMux, server)
 	if err != nil {
 		log.Fatal(err)
 	}
@@ -194,8 +337,9 @@ func runGrpcServer(group *errgroup.Group, ctx context.Context, config utils.Conf
 	}
 
 	logger := grpc.UnaryInterceptor(gapi.Logger)
+
 	grpcServer := grpc.NewServer(logger)
-	pb.RegisterPeerBillTraderServer(grpcServer, server)
+	pb.RegisterPeerbillServer(grpcServer, server)
 	reflection.Register(grpcServer)
 
 	listener, err := net.Listen("tcp", config.GRPCServerAddr)
